[package]
name = "bamboo-rs"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/pietgeursen/bamboo-rs"

[profile.release]
lto = true
panic = 'abort'

[features]
default = ["std"]
std = []

[dependencies]
arrayvec = "0.4.11"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
hex = "0.3.2"
snafu = "0.4.1"
varu64 = "0.6.1"
lipmaa-link = "0.1.0"
blake2b_simd = "0.5.5"
ed25519-dalek = "1.0.0-pre.1"

[dev-dependencies]
criterion = "0.2"
rand = "0.6.0"

[[bench]]
name = "bench"
harness = false
