[package]
name = "bamboo-rs"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/pietgeursen/bamboo-rs"

[lib]
name = "bamboo"
crate-type = ["staticlib", "rlib", "cdylib"]

[profile.release]
lto = true
panic = 'abort'

[features]
default = ["std"]
std = []

[dependencies]
arrayvec = { version = "0.4.11", default-features = false}
serde = { version = "1.0.94", default-features = false, features = ["derive"] }
serde_derive = "1.0.94"
serde_json = "1.0.40"
hex = "0.3.2"
snafu = "0.4.1"
varu64 = "0.6.1"
lipmaa-link = "0.1.1"
blake2b_simd = { version = "0.5.5", default-features = false }
ed25519-dalek = { git = "https://github.com/nickray/ed25519-dalek", branch = "towards-no-std", default-features = false, features = ["u64_backend"] }

[dev-dependencies]
criterion = "0.2"
rand = "0.6.0"

[[bench]]
name = "bench"
harness = false
