[workspace]

members = [
    "bamboo-rs-core",
    "bamboo-rs-core-test",
    "bamboo-rs-cli",
    #"bamboo-rs-log",
    "generate-test-vectors",
    "bamboo-rs-wasm"
]

exclude = [
    "bamboo-rs-log"
]

[profile.release]
codegen-units = 1
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
