[package]
name = "bamboo-core-test"
version = "1.0.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bamboo"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bamboo-core = {path = "../bamboo-core"}

[dev-dependencies]
bamboo-core = {path = "../bamboo-core"}
arrayvec = { version = "0.4.11", default-features = false}
serde = { version = "1.0.94", default-features = false , features = ["derive"] }
serde_derive = { version = "1.0.94", default-features = false }
serde_json = "1.0.40" 
hex = { git = "https://github.com/KokaKiwi/rust-hex", default-features = false }
varu64 = { git = "https://github.com/AljoschaMeyer/varu64-rs", default-features = false } 
lipmaa-link = "0.1.1"
blake2b_simd = { version = "0.5.5", default-features = false }
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", rev = "3a91019", default-features = false, features = ["u64_backend", "alloc"] }
criterion = "0.2"
rand = "0.7.0"

[[bench]]
name = "bench"
harness = false
