[package]
name = "bamboo-core"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/pietgeursen/bamboo-rs"

[lib]
name = "bamboo_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["std"]
std = ["varu64/std", "hex/std"]

[dependencies]
arrayvec = { version = "0.4.11", default-features = false}
serde = { version = "1.0.94", default-features = false , features = ["derive"] }
serde_derive = { version = "1.0.94", default-features = false }
hex = { git = "https://github.com/KokaKiwi/rust-hex", default-features = false }
varu64 = { path = "../../varu64-rs", default-features = false } 
lipmaa-link = "0.1.1"
blake2b_simd = { version = "0.5.5", default-features = false }
ed25519-dalek = { git = "https://github.com/nickray/ed25519-dalek", branch = "towards-no-std", default-features = false, features = ["u64_backend"] }

