[package]
name = "bamboo-rs-core-test"
version = "1.0.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[dependencies]
bamboo-rs-core = {path = "../bamboo-rs-core"}

[dev-dependencies]
bamboo-rs-core = {path = "../bamboo-rs-core"}
bamboo-rs-log = {path = "../bamboo-rs-log"}
arrayvec = { version = "0.5.1", default-features = false}
serde = { version = "1.0.94", default-features = false , features = ["derive"] }
serde_derive = { version = "1.0.94", default-features = false }
serde_json = "1.0.40" 
hex = { version = "0.4", default-features = false }
varu64 = { version ="0.6.2", default-features = false } 
lipmaa-link = "0.1.1"
blake2b_simd = { version = "0.5.5", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "alloc", "serde"] }
criterion = "0.3.3"
rand = "0.7.0"

[[bench]]
name = "bench"
harness = false
