[package]
name = "bamboo-rs-core"
version = "0.1.0-pre-28"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/pietgeursen/bamboo-rs"
description = "Publish and verify signed hash chains of bamboo messages."

[lib]
name = "bamboo_rs_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["std"]
std = ["varu64/std", "hex/std", "rayon", "snafu/std", "ed25519-dalek/serde", "ed25519-dalek/std", "ed25519-dalek/batch", "yamf-hash/std"]

[dependencies]
arrayvec = { version = "0.5.1", default-features = false}
blake2b_simd = { version = "0.5", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
hex = { version = "0.4", default-features = false }
lipmaa-link = "0.1"
rayon = { version = "1.5", optional = true }
serde = { version = "1.0", default-features = false , features = ["derive"] }
serde_derive = { version = "1.0", default-features = false }
snafu = { version = "0.6.10", default-features = false }
static_assertions = "0.3"
varu64 = { version ="0.6.2", default-features = false } 
yamf-hash = { version = "0.1.2", default-features = false }
