[package]
name = "bamboo-rs-log"
version = "1.0.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[dependencies]
bamboo-rs-core = {path = "../bamboo-rs-core"}
lipmaa-link = "0.1.1"
snafu = "0.6.10"

[dev-dependencies]
arrayvec = "0.5.1"
rand = "0.7"
ed25519-dalek = { version = "1.0.1", features = ["u64_backend"] }
