[package]
name = "bamboo-rs-log"
version = "1.0.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-rs-core = {path = "../bamboo-rs-core"}
lipmaa-link = "0.1.1"

[dev-dependencies]
arrayvec = "0.4.11"
rand = "0.6.0"
