[package]
name = "bamboo-wasm"
version = "0.3.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
arrayvec = { version = "0.5", default-features = false}
wasm-bindgen = { version = "0.2.62" , features = ["serde-serialize"] }
bamboo-core = {path = "../bamboo-core"}
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", rev = "29a06e494ddd", default-features = false, features = ["u64_backend", "nightly", "alloc", "serde"] }
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
serde = { version = "1.0.90", features = ["derive"] }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
