[package]
name = "core-test"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-rs-core = {path = "../core"}

[dev-dependencies]
criterion = "0.2"
rand = "0.6.0"

[[bench]]
name = "bench"
harness = false
