[package]
name = "generate-test-vectors"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo-core = {path = "../bamboo-core"}
bamboo-log = {path = "../bamboo-log"}
serde_json = "1.0.40" 
rand = "0.6.0"
