[package]
name = "generate-test-vectors"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
bamboo-core = {path = "../bamboo-core"}
bamboo-log = {path = "../bamboo-log"}
hex = "0.3.2"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.40" 
rand = "0.7.0"
