[package]
name = "generate-test-vectors"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
bamboo-rs-core = {path = "../bamboo-rs-core"}
bamboo-rs-log = {path = "../bamboo-rs-log"}
hex = "0.3.2"
serde = { version = "1.0.90", features = ["derive"] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "serde"] }
serde_json = "1.0.40" 
smol = "1.2.4"
